Make SXSL for SBP 2.0.14 release

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,431 +1,18 @@
 -------------------------------------------------------------------
-Thu Feb 14 15:27:00 UTC 2018 - sknorr@suse.de
+Fri Aug 29 13:37:00 UTC 2019 - sknorr@suse.de
 
-Stable release of the SUSE XSL stylesheets 2.0.9:
+Stable release of the SUSE XSL stylesheets for SBP 2.0.13:
 
 Find issues in our GitHub tracker at
 https://github.com/openSUSE/suse-xsl/issues/NUMBER
 
 HTML only:
-* Bug tracker PIs are now allowed in the info element which means they can now
-  be profiled properly
-* Update GitHub issues URL syntax to properly apply labels again
-
-PDF/HTML:
-* Support for intra xrefs to "section" and "sect5" elements
-
-Packaging:
-* Exclude env/ and *.tmp files from TAR ball
-* Remove dependencies on liberation2-fonts and aspell
-* Remove SUSE dictionary from this package: It does not belong here
-
-Test cases:
-* Markup fixes for dapscompare tests
-* Use correct SCHEMA for dapscompare tests
+* Improve text of Report Bug links
+* Support inserting <link rel=canonical> via XSLT parameter
+  $canonical-url-base=https://some.example.org/doc
 
 -------------------------------------------------------------------
-Thu Sep 28 09:45:00 UTC 2017 - toms@suse.de
+Mon Jul 29 13:37:00 UTC 2019 - sknorr@suse.de
 
-Stable release of the SUSE XSL stylesheets 2.0.8:
-
-Find issues in our GitHub tracker at
-https://github.com/openSUSE/suse-xsl/issues/NUMBER
-
-PDF only:
-* Support footnotes, requested by Stefan Quandt
-  (suse-xsl #313, suse-xsl #314)
-* No colons after type/number in languages other than English
-  (suse-xsl #334)
-
-HTML only:
-* Glossdiv Title: rendered in gray instead of green
-  (suse-xsl #350)
-
-PDF/HTML:
-* No more spaces at the end of titles in formalparas
-  (suse-xsl #288)
-* Intra xref to step doesn't work (suse-xsl #343)
-
-I18N:
-* ja: don't generate the word "book" in intra-xrefs (suse-xsl #323)
-* Correct German quotes (suse-xsl #324, suse-xsl #340)
-* glossseealso: "See Also" -> "See also" (suse-xsl #330)
-
-General:
-* Exclude drupal and db2mediawiki stylesheets as they are now
-  obsolete (suse-xsl #310, suse-xsl #312)
-* Check length of text content in screen (suse-xsl #328)
-* Validate stylesheets through Jing in Travis (suse-xsl #327,
-  suse-xsl #337, suse-xsl #342)
-
-Spec File:
-* Use catalog.d mechanism and remove old XML catalog files, see
-  https://en.opensuse.org/openSUSE:Packaging_XML_Schemas_and_Stylesheets#Add_XML_Catalog_Support
-
--------------------------------------------------------------------
-Thu May 11 17:00:00 UTC 2017 - sknorr@suse.de
-
-Stable release of the SUSE XSL stylesheets 2.0.7.2:
-
-Find issues in our GitHub tracker at
-https://github.com/openSUSE/suse-xsl/issues/NUMBER
-
-* SUSE Word List for aspell
-  - Removed duplicate and invalid words
-
-* Stylesheets (common)
-  - Add a compact style for admonitions, enabled by role="compact" attribute
-    (suse-xsl #211)
-
-* Stylesheets (HTML)
-  - Fix superscript/subscript styles
-
--------------------------------------------------------------------
-Thu Feb 08 19:00:00 UTC 2017 - sknorr@suse.de
-
-Stable release of the SUSE XSL stylesheets 2.0.7.1:
-
-Find issues in our GitHub tracker at
-https://github.com/openSUSE/suse-xsl/issues/NUMBER
-
-* Packaging
-  - On non-SLE platforms, require liberation2-fonts instead of
-    liberation-fonts (suse-xsl #298)
-
-* SUSE Word List for aspell
-  - Added more words from the SUSE Enterprise Storage and
-    SUSE OpenStack Cloud documentation, removed duplicates
-
-* Stylesheets (common)
-  - Fix zh_TW of "Procedure" in certain circumstances (further to
-    suse-xsl #292)
-
--------------------------------------------------------------------
-Thu Jan 27 17:00:00 UTC 2017 - sknorr@suse.de
-
-Stable release of the SUSE XSL stylesheets 2.0.7:
-
-Find issues in our GitHub tracker at
-https://github.com/openSUSE/suse-xsl/issues/NUMBER
-
-* Packaging
-  - Fixed post/postun segments of spec file
-
-* SUSE Word List for aspell
-  - Added more words
-
-* Stylesheets (common)
-  - Translation fixes for zh_CN, zh_TW (suse-xsl #292)
-  - Support of performance="optional" in step (suse-xsl #245)
-  - Do not output empty paras (suse-xsl #270)
-  - Make links and xrefs within remarks readable (suse-xsl #266)
-
-* Stylesheets (PDF)
-  - Make sure procedures appear in qandasets (re: suse-xsl #200)
-  - Color commands in screens green for consistency with HTML version
-    (suse-xsl #216)
-  - Remove hyphenations from ToC and titles (suse-xsl #253)
-  - Use text scaling capabilities for all text
-  - Use sans font for intra-xrefs
-
-* Stylesheets (XHTML)
-  - Old "suse" stylesheets: fix breadcrumbs
-  - Add a caution icon to HTML
-
--------------------------------------------------------------------
-Thu Sep 30 14:00:00 UTC 2016 - sknorr@suse.de
-
-Stable release of the SUSE XSL stylesheets 2.0.6.3:
-
-Find issues in our GitHub tracker at
-https://github.com/openSUSE/suse-xsl/issues/NUMBER
-
-* Packaging
-  - Update post/postun segments of spec file to install the catalog
-
-* Catalog
-  - Remove mentions of NovDoc, as NovDoc is now part of a separate
-    package
-
-* Stylesheets (common)
-  - Updated translations for `suse2013` stylesheets
-
--------------------------------------------------------------------
-Thu Sep 15 15:00:00 UTC 2016 - sknorr@suse.de
-
-Stable release of the SUSE XSL stylesheets 2.0.6.2:
-
-Find issues in our GitHub tracker at
-https://github.com/openSUSE/suse-xsl/issues/NUMBER
-
-* Packaging
-  - Fixed post/postun segments of spec file
-
-* SUSE Word List for aspell
-  - Added more words
-
-* Stylesheets (common)
-  - Added `VERSION.xsl` for `suse2005` stylesheets
-
-* Stylesheets (PDF)
-  - Removed duplicate `fo:marker`s that led to build errors with XEP
-    (suse-xsl #260)
-
-* Stylesheets (XHTML)
-  - Fixed embedded JavaScript, removed old Chrome/Android quirk
-  - Fixed embedding of branding CSS
-  - Made syntax highlighting functional with openSUSE and DAPS
-    brandings
-
--------------------------------------------------------------------
-Thu Aug 04 18:00:00 UTC 2016 - sknorr@suse.de
-
-Stable release of the SUSE XSL stylesheets 2.0.6.1:
-
-Find issues in our GitHub tracker at
-https://github.com/openSUSE/suse-xsl/issues/NUMBER
-
-* Stylesheets (XHTML)
-  - Fixed style of <section><title> elements
-  - Turned off syntax highlighting in cases where it is unexpected
-
--------------------------------------------------------------------
-Mon Aug 01 16:00:00 UTC 2016 - sknorr@suse.de
-
-Stable release of the SUSE XSL stylesheets 2.0.6:
-
-Find issues in our GitHub tracker at
-https://github.com/openSUSE/suse-xsl/issues/NUMBER
-
-* Schema
-  - Completely removed schemas from SUSE XSL Stylesheets: Schemas
-    can now be found at https://github.com/openSUSE/geekodoc
-
-* SUSE Word List for aspell
-  - Added more words, many of which were found in SUSE release
-    notes
-
-* Stylesheets (PDF)
-  - Allow disabling secondary branding (Geeko Tail) via parameter:
-    enable.secondary.branding=0
-
-* Stylesheets (XHTML)
-  - Added syntax highlighting for screens
-    - To enable, add language="..." to your screen
-    - Recognized languages are: bash, c++, css, diff, html, xml,
-      http, ini, json, java, javascript, makefile, nginx, php,
-      perl, python, ruby, sql, crmsh, dockerfile, lisp, yaml
-  - Report Bug Links: Fixed ampersands in Bugzilla URLs
-  - Report Bug Links: Fixed JavaScript responsible for GitHub labels
-
-* Common Stylesheet Changes
-  - Fixed a number of L10N issues in CJK and European languages
-    (suse-xsl #218, suse-xsl #51, suse-xsl #200, suse-xsl #82,
-    suse-xsl #87, suse-xsl #79)
-  - Reverted back to VERSION.xsl as used by upstream for
-    compatibility
-  - Improved screen trimming behavior to fix screens that contain
-    whitespace at beginning and end
-
-* Packaging
-  - Added more fonts to requires to avoid broken foreign-language
-    PDF builds in the build service
-  - Removed mentions of schemas from spec file (see top)
-
--------------------------------------------------------------------
-Fri Apr 22 09:00:00 UTC 2016 - toms@opensuse.org
-
-Stable release of the SUSE XSL stylesheets 2.0.5:
-
-Find issues in our GitHub tracker at
-https://github.com/openSUSE/suse-xsl/issues/NUMBER
-
-* Schema
-  - Add flat SUSEDoc schema for RNC and RNG
-  - Fix NovDoc/DB4 incompatibility: Phrase is only allowed in
-    productname, but not in productnumber
-
-* Spelling
-  - Fix trailing whitespace
-
-* Stylesheets (PDF)
-  - Added missing procedure, itemizedlist, and orderedlist for
-    intra.title.markup mode (suse-xsl #162, ec0cb3d6)
-  - Fix Ulink/Link template for DB 5
-  - Specifically check for @role='abbrev'
-  - Fix for vertical spaces on nested lists (#221)
-  - Question and answers
-    - Make an answer closer to a question
-	- Make consistent use of sans-stack for questions
-	- Use all paras in question consistently
-    - Italic for question label and first para (#200)
-  - Clean up web links
-  - Specifically check for @role='abbrev'
-  - Fix Ulink/Link template for DB 5
-
-* Stylesheets (XHTML)
-  - Add GitHub URL in titlepage of book and article (suse-xsl #35)
-  - Fix functionality of "dm:version"
-  - xref handling
-    - Improve xref and is.xref.in.samebook template
-    - Fix xref resolution when $rootid is empty
-  - Implement vcs.url to fix, remove add.github.url and
-    bibliosource (suse-xsl #35)
-  - add actual book title to HTML pages again (suse-xsl #208)
-  - Fix formatting for intraxref (provides final fix suse-xsl #162)
-
-* Stylesheets (EPUB)
-  - Build EPUBs by default without comments
-
-* Common Stylesheet Changes
-  - allow intra xref linking for tables, figures, admons (suse-xsl #155)
-  - Added missing procedure, itemizedlist, and orderedlist for
-    intra.title.markup mode (suse-xsl #162)
-
-* Packaging
-  - Update Requires/Recommends (also fixes suse-xsl #220)
-  - suse_beta => suse2013
-  - Improve package description in Spec file
-
--------------------------------------------------------------------
-Tue Dec 02 13:41:00 UTC 2015 - toms@opensuse.org
-
-Stable release of the SUSE XSL stylesheets 2.0.4:
-
-Find issues in our GitHub tracker at 
-https://github.com/openSUSE/suse-xsl/issues/NUMBER
-
-* Schema
-  - Allow constant and see (inside `<indexterm>`); make db.all.blocks
-    zero or more (*) for question (fbebfb6)
-  - Remove XLinks from DB5 elements (suse-xsl #99)
-  - Disallow db.all.blocks in lists (suse-xsl #100)
-  - Remove `<menuchoice>` from guiinlines (Novdoc) (a049b85)
-  - Allow `<menuchoice>` in titles (Novdoc) (975b8d6)
-
-* Stylesheets (PDF)
-  - "unbolded" admonition titles (suse-xsl #46)
-  - Odd space in footer where `<productname>` used to be,
-    `<productname>` not displayed on book title page (suse-xsl #50)
-  - Fix style of `<sect5>` titles (suse-xsl #52, bsc#955663)
-  - FOP don't like empty `<fo:table-cell>`s (suse-xsl #97)
-  - Make `<remark>` handling a little more elegant
-  - Attribute sets: fix logic for replacing bold/italic in CJK
-    languages
-
-* Stylesheets (XHTML)
-  - Make Callouts "uncopyable" (suse-xsl #55)
-  - Don't link inline images (suse-xsl #65)
-  - Publication date is incorrectly capitalized (suse-xsl #70)
-  - Create better plain-text output via DAPS (suse-xsl #101)
-  - debug.filename-id: Use `xml:id` for metadata
-  - Various fixes for JS code for tracker
-
-* Common Stylesheet Changes
-  - Style for `<package>` (issue #49)
-  - xrefs to variablelists in another book is broken (suse-xsl #73)
-  - Trim spaces/newlines at beginning/end of verbatim elements
-    (suse-xsl #53)
-  - Fix bugtracker for db4 (suse-xsl #102)
-
--------------------------------------------------------------------
-Tue Aug 11 15:11:52 UTC 2015 - toms@opensuse.org
-
-Stable release of the SUSE XSL stylesheets 2.0.3 (only for OBS):
-
-- Schema:
-  . Fixed #41: Missing prompt element
-
-- Stylesheets:
-  . Fixed #18: Variablelist (with ID and Title) Lacks Permalink
-  . Fixed #31: not declared namespace prefix d
-  . Fixed #36: Fix Hard-Coded Bugzilla Link ("Report Bug")
-
-- Infrastructure:
-  . no changes
-
--------------------------------------------------------------------
-Tue Jul 02 09:11:00 UTC 2015 - toms@opensuse.org
-
-Stable release of the SUSE XSL stylesheets 2.0.1
-
-- Schema
-  . Enabled subtitle and textobject (susedoc5.rnc)
-
-- Stylesheets
-  . Changed bugzilla component to 'Documentation' for SLERT
-    (suse2013/static/js/script.js)
-  . Added missing subtitle for articles
-    suse2013/fo/article.titlepage.templates.xsl
-
-- Infrastructure
-  . Trying to fix an undef value error (bin/xslns-build)
-  . Fixed bin/xslns-build for building ns variant
-
--------------------------------------------------------------------
-Fri Jun 19 12:47:56 UTC 2015 - fsundermeyer@opensuse.org
-
-Stable release of the SUSE XSL stylesheets 2.0
-
-- added latest products to .js file to create correct Bugzilla
-  links in Draft mode
-
--------------------------------------------------------------------
-Thu Jun 11 12:50:28 UTC 2015 - fsundermeyer@opensuse.org
-
-Hotfix for version 2.0-rc6:
-  * Reverted the move of the stylesheets to
-    /usr/share/xml/suse/stylesheet
-    because of serious compatibility issues.
-    The stylesheets remain in
-    /usr/share/xml/suse/docbook.
-
--------------------------------------------------------------------
-Tue May 19 11:09:13 UTC 2015 - fsundermeyer@opensuse.org
-
-New version 2.0-rc6:
- * added SUSEdoc, a fully DocBook 5 compatible schema with a subset of
-   DocBook commands (like NovDoc for DocBook 4)
- * package now supports installation of different schema/DTD versions
-   in parallel
- * stylesheets and schemas have moved to
-   /usr/share/xml/suse/{schema,stylesheet}
-   NOTE: This requires to change STYLEROOT in the DC-files of existing
-   manuals!
--------------------------------------------------------------------
-Mon Apr 27 13:52:45 UTC 2015 - fsundermeyer@opensuse.org
-
-New release 2.0~rc5
-
-New Features:
- * support for DocBook5 - the xsl-ns variants are located in the following
-   directories:
-   -  /usr/share/xml/docbook/stylesheet/daps2013-ns
-   -  /usr/share/xml/docbook/stylesheet/opensuse2013-ns
-   -  /usr/share/xml/docbook/stylesheet/suse-ns
-   -  /usr/share/xml/docbook/stylesheet/suse2013-ns
- * the DocBook5 variants are automatically generated with a slghtly adopted
-   version of xslns-build from upstream
- * SUSE aspell dictionary was moved from DAPS to this package; wordlist
-   was updated
- * started a NovDoc version for DocBook 5: susedoc5
-
-Bugfixes:
- * language fixes for Chinese, Korean, and Japanese
- * Fixed issue #29: Make Parameter runinhead.default.title.end.punct
-   L10N Compatible
- * Fixed sf-issue #246 Allow More Information in Side Regions When in Draft Mode
- * Fixed sf-issue #243 Support Sorting of Acronym in Glossaries in HTML
- * Fixed sf-issue #241:  Allow dir attribute in Novdoc DTD
- * Fixed bold.replacement.color and italic.replacement.color parameter for XEP
- * Fix for guimenus: Use 'inherit' instead of 'transparent' as this value
-   seems not supported by XEP.
- * Novdoc: Missing remap for ulink added
-
--------------------------------------------------------------------
-  15 Mon Apr 15 13:36:00 UTC 2015 - toms@opensuse.org
-
-  Release 2.0.0-rc4
-
-  Taken from Sourceforge
-
+- Initial release of package for SBP stylesheets, roughly
+  on par with suse-xsl-stylesheets 2.0.13
