SUSE 2013: Replace Google+ with LinkedIn share URL

--- a/suse2013-sbp/common/l10n/da.xml
+++ b/suse2013-sbp/common/l10n/da.xml
@@ -37,7 +37,7 @@
    <l:gentext key="navigation" text="Navigation"/>
    <l:gentext key="sharethispage" text="Del denne side: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
-   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
    <l:gentext key="shareviaemail" text="E-mail"/>
    <l:gentext key="printthispage" text="Udskriv denne side"/>
