--- a/suse2013-sbp/common/l10n/fi.xml
+++ b/suse2013-sbp/common/l10n/fi.xml
@@ -31,7 +31,7 @@
    <l:gentext key="navigation" text="Siirtyminen"/>
    <l:gentext key="sharethispage" text="Jaa tämä sivu: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
-   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
    <l:gentext key="shareviaemail" text="Sähköposti"/>
    <l:gentext key="printthispage" text="Tulosta tämä sivu"/>
