--- a/suse2013-sbp/common/l10n/cs.xml
+++ b/suse2013-sbp/common/l10n/cs.xml
@@ -29,7 +29,7 @@
    <l:gentext key="navigation" text="Navigace"/>
    <l:gentext key="sharethispage" text="Sdílet tuto stránku: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
-   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
    <l:gentext key="shareviaemail" text="E-mail"/>
    <l:gentext key="printthispage" text="Vytisknout tuto stránku"/>
