--- a/suse2013-sbp/common/l10n/it.xml
+++ b/suse2013-sbp/common/l10n/it.xml
@@ -34,7 +34,7 @@
    <l:gentext key="navigation" text="Navigazione"/>
    <l:gentext key="sharethispage" text="Condividi pagina: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
-   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
    <l:gentext key="shareviaemail" text="E-mail"/>
    <l:gentext key="printthispage" text="Stampa pagina"/>
