--- a/suse2013-sbp/common/l10n/pt_br.xml
+++ b/suse2013-sbp/common/l10n/pt_br.xml
@@ -31,7 +31,7 @@
    <l:gentext key="navigation" text="Navegação"/>
    <l:gentext key="sharethispage" text="Compartilhar esta página: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
-   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
    <l:gentext key="shareviaemail" text="E-mail"/>
    <l:gentext key="printthispage" text="Imprimir esta página"/>
