--- a/suse2013-sbp/common/l10n/sv.xml
+++ b/suse2013-sbp/common/l10n/sv.xml
@@ -35,7 +35,7 @@
    <l:gentext key="navigation" text="Navigering"/>
    <l:gentext key="sharethispage" text="Dela den här sidan: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
-   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
    <l:gentext key="shareviaemail" text="E-post"/>
    <l:gentext key="printthispage" text="Skriv ut sidan"/>
