--- a/suse2013/common/l10n/de.xml
+++ b/suse2013/common/l10n/de.xml
@@ -27,7 +27,7 @@
    <l:gentext key="navigation" text="Navigation"/>
    <l:gentext key="sharethispage" text="Diese Seite teilen: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
-   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
    <l:gentext key="shareviaemail" text="E-Mail"/>
    <l:gentext key="printthispage" text="Diese Seite drucken"/>
