--- a/suse2013/common/l10n/es.xml
+++ b/suse2013/common/l10n/es.xml
@@ -34,7 +34,7 @@
    <l:gentext key="navigation" text="Navegación"/>
    <l:gentext key="sharethispage" text="Compartir esta página: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
-   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
    <l:gentext key="shareviaemail" text="Correo electrónico"/>
    <l:gentext key="printthispage" text="Imprimir esta página"/>
