--- a/suse2013/common/l10n/fr.xml
+++ b/suse2013/common/l10n/fr.xml
@@ -33,7 +33,7 @@
    <l:gentext key="navigation" text="Navigation"/>
    <l:gentext key="sharethispage" text="Partager cette page&#160;: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
-   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
    <l:gentext key="shareviaemail" text="Message électronique"/>
    <l:gentext key="printthispage" text="Imprimer cette page"/>
