--- a/suse2013/common/l10n/ja.xml
+++ b/suse2013/common/l10n/ja.xml
@@ -30,7 +30,7 @@
    <l:gentext key="navigation" text="ナビゲーション"/>
    <l:gentext key="sharethispage" text="このページを共有: "/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
-   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
    <l:gentext key="shareviaemail" text="電子メール"/>
    <l:gentext key="printthispage" text="このページを印刷"/>
