Set version to 2.0.16

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,45 @@
 -------------------------------------------------------------------
+Thu May 15 13:37:00 UTC 2020 - sknorr@suse.com
+
+Stable release of the SUSE XSL stylesheets for SBP 2.0.16:
+
+https://github.com/openSUSE/suse-xsl/releases/tag/sbp-2.0.16
+
+- General:
+  - Use consistent question label in `qandaentry`s (bsc#1162324)
+  - Update architecture names to current nomenclature
+  - Disable intra-xrefs if we point to another book AND we have an
+    @xrefstyle -> output the same text content as the original xref
+    template but remove the link (#398)
+
+- HTML:
+  - Allow copying content of screens to the clipboard
+  - Support for issue templates in report-bug links
+  - Share buttons: Use LinkedIn instead of Google+, use oldschool
+    "mailto:" link instead of e-mail form on suse.com
+  - Fix issues where we got duplicate section/chapter IDs in HTML
+    output (#269)
+  - Add permalinks to more output elements (such as chapters)
+  - Add og:... tags to HTML pages, for improved social sharing
+  - Allow including external JS with new parameters external.js (always
+    include) and external.js.onlineonly (only include when on
+    non-"file:" URL)
+  - Stop relying on negative margins in CSS that were causing overlaid
+    elements and other ugly experience issue
+  - Fix closing behavior of mobile menu
+  - Minor CSS improvements
+  - Update SUSE footer link URLs
+  - Open clicked images in new tab/window by default
+  - Stop adding "Abstract" titles over abstracts
+
+PDF:
+  - Fix layout regressions that occurred after libxml bug fixes:
+    admon titles, book titles, imprint text (#369)
+  - Change imprint address to SUSE LLC Provo
+  - Fix old documentation link www.suse.com/documentation
+    and replace it with https://documentation.suse.com/ (#402)
+
+-------------------------------------------------------------------
 Fri Aug 29 13:37:00 UTC 2019 - sknorr@suse.de
 
 Stable release of the SUSE XSL stylesheets for SBP 2.0.13:
