--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,20 @@
 -------------------------------------------------------------------
+Thu May 20 13:37:00 UTC 2020 - sknorr@suse.com
+
+Stable release of the SUSE XSL stylesheets for SBP 2.0.17:
+
+https://github.com/openSUSE/suse-xsl/releases/tag/sbp-2.0.17
+
+- HTML:
+  - Fix recursion issue that broke builds of certain long
+    documents because we evaluated far too much content for
+    teaser texts
+  - Get fonts CSS via HTTPS by default
+
+- Other:
+  - Fix release version insertion in Makefile
+
+-------------------------------------------------------------------
 Fri May 15 13:37:00 UTC 2020 - sknorr@suse.com
 
 Stable release of the SUSE XSL stylesheets for SBP 2.0.16:
