--- a/suse2013/common/l10n/zh_cn.xml
+++ b/suse2013/common/l10n/zh_cn.xml
@@ -187,11 +187,12 @@
    </l:context>
 
    <l:context name="title-numbered">
-      <l:template name="chapter" text="&#31532;&#160;%n&#160;&#31456;%t"/>
+      <l:template name="chapter" text="&#31532;&#160;%n&#160;&#31456; %t"/>
+      <l:template name="part" text="&#31532;&#160;%n&#160;&#37096;&#20998; %t"/>
    </l:context>
 
    <l:context name="title">
-      <l:template name="chapter" text="&#31532;&#160;%n&#160;&#31456;%t"/>
+      <l:template name="chapter" text="&#31532;&#160;%n&#160;&#31456; %t"/>
    </l:context>
 
   <l:context name="xref-number-and-title">
