--- a/suse2022-ns/common/l10n/zh_cn.xml
+++ b/suse2022-ns/common/l10n/zh_cn.xml
@@ -24,7 +24,7 @@
   <l:gentext key="runinhead.default.title.end.punct" text="&#xff1a;"/>
 
   <l:gentext key="navigation" text="导航"/>
-  <l:gentext key="sharethispage" text="分享此页︰ "/>
+  <l:gentext key="sharethispage" text="分享此页"/>
   <l:gentext key="shareviafacebook" text="Facebook"/>
   <l:gentext key="sharevialinkedin" text="LinkedIn"/>
   <l:gentext key="shareviatwitter" text="Twitter"/>
