--- a/suse2021-ns/common/l10n/da.xml
+++ b/suse2021-ns/common/l10n/da.xml
@@ -35,7 +35,7 @@
    <l:gentext key="runinhead.default.title.end.punct" text="."/>
 
    <l:gentext key="navigation" text="Navigation"/>
-   <l:gentext key="sharethispage" text="Del denne side: "/>
+   <l:gentext key="sharethispage" text="Del denne side"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
