--- a/suse2021-ns/common/l10n/en.xml
+++ b/suse2021-ns/common/l10n/en.xml
@@ -26,7 +26,10 @@
    <l:gentext key="runinhead.default.title.end.punct" text="."/>
 
    <l:gentext key="navigation" text="Navigation"/>
-   <l:gentext key="sharethispage" text="Share this page: "/>
+
+   <l:gentext key="onthispage" text="On this page"/>
+
+   <l:gentext key="sharethispage" text="Share this page"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
