--- a/suse2021-ns/common/l10n/es.xml
+++ b/suse2021-ns/common/l10n/es.xml
@@ -32,7 +32,7 @@
    <l:gentext key="runinhead.default.title.end.punct" text="."/>
 
    <l:gentext key="navigation" text="Navegación"/>
-   <l:gentext key="sharethispage" text="Compartir esta página: "/>
+   <l:gentext key="sharethispage" text="Compartir esta página"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
