--- a/suse2021-ns/common/l10n/ko.xml
+++ b/suse2021-ns/common/l10n/ko.xml
@@ -32,7 +32,7 @@
    <l:gentext key="runinhead.default.title.end.punct" text="."/>
 
    <l:gentext key="navigation" text="탐색"/>
-   <l:gentext key="sharethispage" text="이 페이지 공유: "/>
+   <l:gentext key="sharethispage" text="이 페이지 공유"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
