--- a/suse2021-ns/common/l10n/sv.xml
+++ b/suse2021-ns/common/l10n/sv.xml
@@ -33,7 +33,7 @@
    <l:gentext key="runinhead.default.title.end.punct" text="."/>
 
    <l:gentext key="navigation" text="Navigering"/>
-   <l:gentext key="sharethispage" text="Dela den här sidan: "/>
+   <l:gentext key="sharethispage" text="Dela den här sidan"/>
    <l:gentext key="shareviafacebook" text="Facebook"/>
    <l:gentext key="sharevialinkedin" text="LinkedIn"/>
    <l:gentext key="shareviatwitter" text="Twitter"/>
