Set version to 2.83.1

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 -------------------------------------------------------------------
+Wed Mar 30 17:02:00 UTC 2020 - tomschr@users.noreply.github.com
+
+Fix publication date on title page
+
+-------------------------------------------------------------------
 Thu Feb 21 13:37:00 UTC 2020 - sknorr@suse.com
 
 Beta release of the SUSE XSL stylesheets 2.83.0:
