--- a/suse/common/l10n/zh_cn.xml
+++ b/suse/common/l10n/zh_cn.xml
@@ -142,5 +142,6 @@
    
    <l:context name="datetime">
      <l:template name="titlepage.format" text="Y-m-d"/>
+     <l:template name="format" text="Y-m-d"/>
    </l:context>
 </l:l10n>
