--- a/suse2022-ns/common/l10n/zh_cn.xml
+++ b/suse2022-ns/common/l10n/zh_cn.xml
@@ -205,5 +205,6 @@
 
   <l:context name="datetime">
     <l:template name="titlepage.format" text="Y-m-d"/>
+    <l:template name="format" text="Y-m-d"/>
   </l:context>
 </l:l10n>
