--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,15 @@
 -------------------------------------------------------------------
+Fri Jul 08 09:05:00 UTC 2020 - tomschr@users.noreply.github.com
+
+- Update to 2.84.0:
+  - Fix #96: Remove SUSE address
+  - Fix #458: figure-label for fr-fr: remove stray letter "t"
+  - Fix #458: Add missing datetime format for zh_*
+  - Fix #465: Replace old SUSE logo for suse2013
+  - Fix #463: Use correct inline color for screen
+  - Add README for SUSE's SASS customization
+
+-------------------------------------------------------------------
 Wed Mar 30 17:02:00 UTC 2020 - tomschr@users.noreply.github.com
 
 - Update to 2.83.1:
