--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 -------------------------------------------------------------------
+Tue Aug 02 13:42:00 UTC 2022 - tomschr@users.noreply.github.com
+
+- Update 2.86.0
+  - Update jQuery to 1.12.4 (#485)
+  - Add new section "creating a new release" in README
+  - Fix again color issue (#486)
+
+-------------------------------------------------------------------
 Mon Aug 01 17:07:00 UTC 2022 - tomschr@users.noreply.github.com
 
 - Update 2.85.2
