--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 -------------------------------------------------------------------
+Tue Sep 08 13:50:00 UTC 2022 - tomschr@users.noreply.github.com
+
+- Update 2.86.2
+  - Fix another problem with report bug links (#493)
+
+-------------------------------------------------------------------
 Tue Sep 07 13:50:00 UTC 2022 - tomschr@users.noreply.github.com
 
 - Update 2.86.1
