Update ChangeLog for 2.86.3

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,11 @@
 -------------------------------------------------------------------
+Wed Sep 12 12:10:00 UTC 2022 - tomschr@users.noreply.github.com
+
+- Update 2.86.3
+  - Fix DOCTEAM-721: Add quote characters for zh_TW (5df1237)
+  - Fix #DOCTEAM-778: Adjust HTML headings (SEO) (#498)
+
+-------------------------------------------------------------------
 Tue Sep 08 13:50:00 UTC 2022 - tomschr@users.noreply.github.com
 
 - Update 2.86.2
